M70: Fix PDF printing for mixed page sizes and annotations.

PDF contents have to be fit into the printable area before the PDF gets
flattened for printing. Otherwise some PDFs will not print correctly.
r554188 flipped the ordering, so this flips it back.

BUG=873840
TBR=thestig@chromium.org

(cherry picked from commit 78ac34bd2f7179fceb1f7e7f095fad1be9ea57c2 [formerly 668ba31194b023eef3c90930fa842c4e6d62f001])

Change-Id: I68a05d0951caa31080b3b9bb424d458a899b92a7
Reviewed-on: https://chromium-review.googlesource.com/1237719
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#593258}
Reviewed-on: https://chromium-review.googlesource.com/1252014
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#738}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: e9bc6baa529a36971aa0050e46e21b1dfa1fa3fd